--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,9 +23,9 @@
                             <a class= "btn btn-primary col-2 mx-5 btn-redo" [routerLink]="['/register']">Registro</a>
                         </div>
 
-                        <div class="row d-flex justify-content-center">
+                        <!--<div class="row d-flex justify-content-center">
                             <button (click)="onGoogleLogin()" class="btn btn-light col-2 btn-redo mb-5"> <img src="https://img.icons8.com/color/16/000000/google-logo.png"> LOGIN CON GOOGLE</button>
-                        </div>
+                        </div>-->
 
                     </form>
 
