--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -43,7 +43,7 @@
 
                             <div class="form-group colorblanco d-flex justify-content-center mt-5 col-8">
                                 <input class="form-control form-control-lg col-11" formControlName="password"
-                                placeholder="Contraseña" [class]="isValidField('password')">
+                                placeholder="Contraseña (Minimo 6 caracteres)" [class]="isValidField('password')">
                             </div>
 
                             <div class="row d-flex justify-content-center mb-5 mt-5">
