--- a/src/app/secciones/guiones/guiones.component.css
+++ b/src/app/secciones/guiones/guiones.component.css
@@ -31,6 +31,11 @@
 .parrafo{
   text-align: justify;
   margin: 2%;
+  font-weight: normal;
+}
+
+.titulos{
+  font-weight: bolder;
 }
 
 #pantalla{
@@ -43,7 +48,8 @@
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: start;
+ 
 }
 .proyectos{
   text-align: center;
@@ -61,6 +67,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+  margin-left: 0.5%;
 }
 /*.icono{
   border-left: 10px;
@@ -95,6 +102,18 @@
   height: 400px;
   overflow-y: scroll;
 }
+
+.descripcion_Seccion{
+  font-weight: normal;
+}
+
+h1 h3 {
+  color: red;
+  font-weight: bolder;
+}
+
+
+
 /*-----------------------------------------------Estilos Modales------------------------------------------*/
 
 /*--------------------------------------------------Eliminar----------------------------------------------*/
