--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,8 @@
           [src]="imgsrc2d" 
           (mouseover)="imgsrc2d ='../../assets/2d.gif'" 
           (mouseout)="imgsrc2d = '../../assets/2D.png'"  alt="Paris"   class="mx-auto d-block">
-        </a>  
+        </a> 
+        <div class="centrado1"><h2>Animacion 2D</h2></div> 
       </div>
       <div class="col-sm-4 "> 
         <a href="foro">
@@ -21,14 +22,16 @@
           (mouseover)="imgsrclampara ='../../assets/lampara.gif'" 
           (mouseout)="imgsrclampara = '../../assets/lampara.png'" alt="Paris" class="mx-auto d-block">
         </a>
+        <div class="centrado2"><h1>Foro</h1></div>
       </div>
       <div class="col-sm-4">
         <a href="animacion">
           <img id="logo3d" 
           [src]="imgsrc3d" 
           (mouseover)="imgsrc3d = '../../assets/3D.gif'" 
-          (mouseout)="imgsrc3d = '../../assets/3D.png'" alt="Paris"  class="mx-auto d-block">
-        </a>  
+          (mouseout)="imgsrc3d = '../../assets/3D.png'" alt="Paris"  class="mx-auto d-block" >
+        </a>
+        <div class="centrado3"><h2>Animacion 3D</h2></div>  
       </div>
     </div>
   </div>
@@ -42,6 +45,7 @@
             (mouseover)="imgsrcguiones = '../../assets/guiones2.gif'" 
             (mouseout)="imgsrcguiones = '../../assets/guiones2.png'" alt="Paris"   class="mx-auto d-block"> 
           </a> 
+          <div class="centrado4"><h5>Cortos y Guiones</h5></div>
         </div>
         <div class="col-sm-3 ">
           <a href="audiovideo">
@@ -49,7 +53,8 @@
             [src]="imgsrcaudio" 
             (mouseover)="imgsrcaudio = '../../assets/audio.gif'" 
             (mouseout)="imgsrcaudio = '../../assets/audio.png'" alt="Paris"   class="mx-auto d-block">
-          </a> 
+          </a>
+          <div class="centrado5"><h5>Audio y Video</h5></div> 
         </div>
         <div class="col-sm-3">
           <a href="programacion">
@@ -58,7 +63,8 @@
             (mouseover)="imgsrcprogramacion = '../../assets/promagramacion.gif'" 
             (mouseout)="imgsrcprogramacion = '../../assets/promagramacion.png'"
             alt="Paris"  class="mx-auto d-block">
-          </a>  
+          </a>
+          <div class="centrado6"><h5>Programación</h5></div>  
         </div>
         <div class="col-sm-3">
           <a href="aplicacion">
@@ -67,6 +73,7 @@
             (mouseover)="imgsrcrealidad = '../../assets/realidad.gif'" 
             (mouseout)="imgsrcrealidad = '../../assets/realidad.png'" alt="Paris"  class="mx-auto d-block">
           </a> 
+          <div class="centrado7"><h6>Apliacaciones y Entornos Virtuales</h6></div>
         </div>
       </div>
     </div>
