--- a/src/app/secciones/aplicacion/aplicacion.component.css
+++ b/src/app/secciones/aplicacion/aplicacion.component.css
@@ -38,7 +38,7 @@
 #pantalla{
   display:flex;
   justify-content: space-between;
-  font-family: 'Poppins', sans-serif
+  font-family: 'Poppins bold', sans-serif
 }
 
 .cuadricula{
