--- a/src/app/secciones/animacion/animacion.component.css
+++ b/src/app/secciones/animacion/animacion.component.css
@@ -39,7 +39,7 @@
 #pantalla{
   display:flex;
   justify-content: space-between;
-  font-family: 'Poppins', sans-serif
+  font-family: 'Poppins bold', sans-serif
   
 }
 
