--- a/src/app/secciones/guiones/guiones.component.css
+++ b/src/app/secciones/guiones/guiones.component.css
@@ -41,7 +41,7 @@
 #pantalla{
   display:flex;
   justify-content: space-between;
-  font-family: 'Poppins', sans-serif
+  font-family: 'Poppins bold', sans-serif
 }
 
 .cuadricula{
