--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,31 +7,28 @@
   <div class="container">  
     <div class="row justify-content-center" >
       <div class="col-sm-4">
-        <a href="animacion">
+        <a href="animacion" data-toggle="tooltip" data-placement="top" title="Animacion 2D">
           <img id="logo2d" 
           [src]="imgsrc2d" 
           (mouseover)="imgsrc2d ='../../assets/2d.gif'" 
           (mouseout)="imgsrc2d = '../../assets/2D.png'"  alt="Paris"   class="mx-auto d-block">
         </a> 
-        <div class="centrado1"><h2>Animacion 2D</h2></div> 
       </div>
       <div class="col-sm-4 "> 
-        <a href="foro">
+        <a href="foro" data-toggle="tooltip" data-placement="top" title="Foro Multimedia">
           <img id="lampara" 
           [src]="imgsrclampara"
           (mouseover)="imgsrclampara ='../../assets/lampara.gif'" 
           (mouseout)="imgsrclampara = '../../assets/lampara.png'" alt="Paris" class="mx-auto d-block">
         </a>
-        <div class="centrado2"><h1>Foro</h1></div>
       </div>
       <div class="col-sm-4">
-        <a href="animacion">
+        <a href="animacion" data-toggle="tooltip" data-placement="top" title="Animacion 3D">
           <img id="logo3d" 
           [src]="imgsrc3d" 
           (mouseover)="imgsrc3d = '../../assets/3D.gif'" 
           (mouseout)="imgsrc3d = '../../assets/3D.png'" alt="Paris"  class="mx-auto d-block" >
         </a>
-        <div class="centrado3"><h2>Animacion 3D</h2></div>  
       </div>
     </div>
   </div>
@@ -39,41 +36,37 @@
     <div class="sec">
       <div class="row justify-content-center" >
         <div class="col-sm-3">
-          <a href="guiones">
+          <a href="guiones" data-toggle="tooltip" data-placement="top" title="Cortos y Guiones">
             <img id="logoguiones" 
             [src]="imgsrcguiones" 
             (mouseover)="imgsrcguiones = '../../assets/guiones2.gif'" 
             (mouseout)="imgsrcguiones = '../../assets/guiones2.png'" alt="Paris"   class="mx-auto d-block"> 
-          </a> 
-          <div class="centrado4"><h5>Cortos y Guiones</h5></div>
+          </a>
         </div>
         <div class="col-sm-3 ">
-          <a href="audiovideo">
+          <a href="audiovideo" data-toggle="tooltip" data-placement="top" title="Audio y Video">
             <img id="logoaudio" 
             [src]="imgsrcaudio" 
             (mouseover)="imgsrcaudio = '../../assets/audio.gif'" 
             (mouseout)="imgsrcaudio = '../../assets/audio.png'" alt="Paris"   class="mx-auto d-block">
           </a>
-          <div class="centrado5"><h5>Audio y Video</h5></div> 
         </div>
         <div class="col-sm-3">
-          <a href="programacion">
+          <a href="programacion" data-toggle="tooltip" data-placement="top" title="Programacion">
             <img id="logoprogramacion" 
             [src]="imgsrcprogramacion" 
             (mouseover)="imgsrcprogramacion = '../../assets/promagramacion.gif'" 
             (mouseout)="imgsrcprogramacion = '../../assets/promagramacion.png'"
             alt="Paris"  class="mx-auto d-block">
           </a>
-          <div class="centrado6"><h5>Programación</h5></div>  
         </div>
         <div class="col-sm-3">
-          <a href="aplicacion">
+          <a href="aplicacion" data-toggle="tooltip" data-placement="top" title="Aplicaciones y Entornos Virtuales">
             <img id="logorealidad" 
             [src]="imgsrcrealidad" 
             (mouseover)="imgsrcrealidad = '../../assets/realidad.gif'" 
             (mouseout)="imgsrcrealidad = '../../assets/realidad.png'" alt="Paris"  class="mx-auto d-block">
-          </a> 
-          <div class="centrado7"><h6>Apliacaciones y Entornos Virtuales</h6></div>
+          </a>
         </div>
       </div>
     </div>
